# bobble_controllers

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README  README.md  bobble_controllers_plugins.xml  package.xml  setup.py
analysis/: impulse_force.bag  make_plots.py  plots.yaml
analysis/notebooks/CgPlacement/: CgAnalysis.ipynb  env.py
analysis/notebooks/DriveControl/: DriveControlAnalysis.ipynb  env.py
analysis/notebooks/FilterDesign/: FilterDesign.ipynb  env.py  plots.yaml
analysis/notebooks/RosJupyterAnalysis/: RosJupyterAnalysis.ipynb  RosJupyterAnalysisPart1.ipynb  RosJupyterAnalysisPart2.ipynb  RosJupyterAnalysisPart3.ipynb  nb_env.py  plots.yaml
analysis/notebooks/TiltControl/: TiltControlAnalysis.ipynb  env.py
analysis/notebooks/TurningControl/: TurningControlAnalysis.ipynb  env.py  plots.yaml
analysis/notebooks/VelocityControl/: VelocityControlAnalysis.ipynb  env.py
config/: .bobble_balance_control.yaml.swn  bobble_balance_control.yaml  bobble_balance_hw_control.yaml  bobble_hw_balance_control.yaml  bobble_hw_config.yaml  bobble_sim_balance_control.yaml  bobble_slow_and_safe_hw_control.yaml  bobble_zippy_hw_control.yaml
docs/: HardwareGuide.md
include/bobble_controllers/: BalanceBaseController.h  BalanceControllerData.h  BalanceSimController.h  BobbleBalanceController.h  BobbleBotHw.h  BobbleControllerBase.h  ChupJointCommandInterface.h  ChupJointStateInterface.h  Filter.h  HighPassFilter.h  LowPassFilter.h  MadgwickAHRS.h  PIDFilters.h  PidControl.h  SingleWheelController.h  Utils.h
launch/: apply_impulse_force.launch  bobble_balance.launch  bobble_balance_hw.launch  bobble_balance_sim.launch  bobble_balance_sim_headless.launch  bobble_balance_state_hold.launch  drive_square.launch  drive_square_js_cmds.bag  run_sim.launch  run_sim_with_joystick.launch
msg/: BobbleBotStatus.msg  ControlCommands.msg  RtStatus.msg  WheelCommands.msg  WheelControlCommands.msg  WheelStatus.msg
scripts/: move_home.sh  move_initial.sh  move_zero.sh
src/: BalanceBaseController.cpp  BalanceSimController.cpp  BobbleBalanceController.cpp  BobbleBalanceHwController.cpp  BobbleBotHw.cpp  BobbleControllerBase.cpp  Filter.cpp  HighPassFilter.cpp  LowPassFilter.cpp  MadgwickAHRS.cpp  PIDFilters.cpp  PidControl.cpp  SingleWheelController.cpp  Utils.cpp  ~
src/analysis_tools/: filters.py  parsing.py  plots.py
src/bobble_controllers_nodes/: ApplyImpulse  BobbleStateHold  JoystickControl  KeyboardControl
src/nodes/: ApplyImpulse  BobbleControlNode.cpp  BobbleStateHold  JoystickControl  KeyboardControl
test/: BobbleIntegrationTest.py  SimPlots_Test.launch  SimPlots_Test.py  TestSummary.html  TestSummary.ipynb  bad_balance_control_config.yaml  balance_controller.test  balance_controller_test.cpp  bobble_balance_hw.launch  bobble_hw_config.yaml  common.launch  filter_test.cpp  good_balance_control_config.yaml  impulse_force.test  js_drive_square.test  nb_env.py  no_balance.test  no_balance_test.cpp  parsing_test.py  plots.yaml  plots_test.py  test_common.h
test/data/: balance.bag  balance.csv  drive_square_js_response.bag  drive_square_js_response.csv  impulse_force.bag  impulse_force.csv  no_balance.bag  no_balance.csv
test/xacro/: bno055_imu.urdf.xacro  bobble.urdf.xacro  bobble_chassis.urdf.xacro  bobble_world.urdf.xacro  left_wheel.urdf.xacro  right_wheel.urdf.xacro
