<?xml version="1.0"?>
<package>
  <name>bobble_controllers</name>
  <version>1.0.0</version>
  <description>The bobble_controllers package</description>
  <maintainer email="mike.moore@so.engineering">Mike Moore
  	</maintainer>
  <license>tbd</license>
  <url type="website">tbd</url>
  <author email="mike.moore@so.engineering">Mike Moore</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_interface</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>bno055</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>bno055</run_depend>
  <run_depend>joint_state_controller</run_depend>

  <export>
    <controller_interface plugin="${prefix}/bobble_controllers_plugins.xml"/>
  </export>

</package>
